Fix visibility issue with newDiv

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,16 +204,12 @@ a:link {
   text-align: center;
 }
 
-.add-plant, #insert-here {
+.add-plant {
   border-style: solid;
   border-width: 5px;
   border-color: #0B0E5B;
   margin: 50px;
   border-radius: 25px;
-}
-
-#insert-here {
-  display: none;
 }
 
 /************************************ Form Plant Divs */
